--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ footer {
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
+    margin: 0;
 }
 
 .row-content {
@@ -39,4 +40,8 @@ footer {
 
 .d-none, .d-sm-block {
     display: none;
+}
+
+.navbar {
+    background-color: #901CAD;
 }
